# MCTSummit

./: .gitignore  README.md  demo-plan.md  pyproject.toml  ui.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
scripts/: update_pr_description.py
specs/002-ai-study-plan/: spec.md
specs/003-ai-study-plan-generator/: spec.md
specs/003-ai-study-plan-generator/checklists/: requirements.md
src/: app.py
